engine/tests/detection_corpus/bad/sqli_concat_py.py
query = "DELETE FROM logs WHERE id = " + str(log_id)
